--- a/package.json
+++ b/package.json
@@ -1,19 +1,61 @@
 {
-   "name": "BeShopping",
+   "name": "beshopping",
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
+   "main": "index.js",
    "devDependencies": {
-      "ts-node": "3.3.0",
-      "@types/node": "^8.0.29",
-      "typescript": "3.3.3333"
+      "@types/cookie-parser": "^1.4.2",
+      "@types/cors": "^2.8.8",
+      "@types/express": "^4.17.8",
+      "@types/hapi__joi": "^17.1.6",
+      "@types/helmet": "^4.0.0",
+      "@types/lodash": "^4.14.163",
+      "@types/morgan": "^1.9.2",
+      "@types/mysql": "2.15.20",
+      "@types/node": "^14.14.6",
+      "@types/supertest": "^2.0.11",
+      "@typescript-eslint/eslint-plugin": "^4.6.0",
+      "@typescript-eslint/parser": "^4.6.0",
+      "colors": "^1.4.0",
+      "concurrently": "^5.3.0",
+      "dotenv": "^8.2.0",
+      "eslint": "^7.12.1",
+      "eslint-config-prettier": "^6.15.0",
+      "eslint-plugin-prettier": "^3.1.4",
+      "nodemon": "^2.0.6",
+      "prettier": "^2.1.2",
+      "rimraf": "^3.0.2",
+      "supertest": "^6.0.0",
+      "ts-node": "^9.0.0",
+      "tslint": "^6.1.0",
+      "typescript": "^4.0.5"
    },
    "dependencies": {
-      "typeorm": "0.2.41",
+      "@hapi/joi": "^17.1.1",
+      "@types/bcryptjs": "^2.4.2",
+      "@types/jsonwebtoken": "^8.5.8",
+      "bcryptjs": "^2.4.3",
+      "cookie-parser": "^1.4.5",
+      "cors": "^2.8.5",
+      "db-errors": "^0.2.3",
+      "express": "^4.17.1",
+      "helmet": "^4.1.1",
+      "jsonwebtoken": "^8.5.1",
+      "lodash": "^4.17.20",
+      "mysql2": "^2.3.3",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.41"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+      "start": "npm run build && npm run serve",
+      "serve": "node -r dotenv/config build/server.js",
+      "build": "npm run clean && npm run build-ts",
+      "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+      "watch-node": "nodemon -r dotenv/config build/server.js",
+      "clean": "rimraf ./build",
+      "build-ts": "tsc",
+      "watch-ts": "tsc -w",
+      "eslint": "eslint . --ext .js,.ts",
+      "upgrade": "npm update --save-dev && npm update --save"
    }
 }
