--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,27 @@
 {
    "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
-      ],
-      "target": "es5",
+      "lib": ["es6","esnext.bigint"],
       "module": "commonjs",
       "moduleResolution": "node",
-      "outDir": "./build",
+      "outDir": "build",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
-   }
+      "sourceMap": true,
+      "esModuleInterop": true,
+      "target": "ES2019",
+      "allowJs": false,
+      "strictNullChecks": true,
+      "noImplicitAny": true,
+      "strict": true,
+      "strictFunctionTypes": false,
+      "noImplicitThis": false,
+      "resolveJsonModule": true,
+      "strictPropertyInitialization": false,
+      "baseUrl": ".",
+      "paths": {
+         "*": ["node_modules/*", "src/types/*"]
+      }
+   },
+   "include": ["src/**/*"],
+  "exclude": [".templates"]
 }
